[tool.poetry]
name = "mit-eamusement"
version = "0.1.0"
description = ""
authors = ["Kyle Anthony Williams <kyle.anthony.williams2@gmail.com>"]
readme = "README.md"
packages = [{include = "mit_eamusement"}]

[tool.poetry.dependencies]
python = ">=3.10, <3.14"
pyscard = "^2.0.10"
pynput = "^1.7.7"
pydirectinput = {version = "^1.0.4", platform = "win32"}


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
