[tool.poetry]
name = "spice-card-tap"
version = "0.1.0"
description = ""
authors = ["Kyle Anthony Williams <kyle.anthony.williams2@gmail.com>"]
readme = "README.md"
license = "Unlicense"

[tool.poetry.dependencies]
python = ">=3.10, <3.14"
pyscard = "^2.0.10"
websockets = "^13.0"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
